manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microsvc
  labels:
    istio-injection: enabled
